--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <!-- Don't let your Mac use a crazy non-standard encoding -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        
+        <compiler.style>DETAILED</compiler.style>
     </properties>
 
     <dependencyManagement>
@@ -104,6 +106,8 @@
                         <!-- Ask GWT to create the Story of Your Compile (SOYC) (gwt:compile) -->
                         <arg>-compileReport</arg>
                         <arg>-XcompilerMetrics</arg>
+                        <arg>-style</arg> 
+                        <arg>${compiler.style}</arg>
                     </compilerArgs>
                     <!-- DevMode configuration -->
                     <warDir>${project.build.directory}/${project.build.finalName}</warDir>
@@ -112,6 +116,14 @@
                     <startupUrls>
                         <startupUrl>bsteeleMusicApp.html</startupUrl>
                     </startupUrls>
+                    
+                    <!--    bob -->
+                    <style>${compiler.style}</style>
+                    <codeserverArgs>
+                        <arg>-style</arg>
+                        <arg>${compiler.style}</arg>
+                    </codeserverArgs>
+                    
                 </configuration>
             </plugin>
 
