--- a/pom.xml
+++ b/pom.xml
@@ -63,14 +63,22 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
-    
-            
-        <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/exec-maven-plugin -->
-        <dependency>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>1.6.0</version>
-        </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/com.google.code.gwt-log/gwt-log -->
+        <!--        <dependency>
+            <groupId>com.google.code.gwt-log</groupId>
+            <artifactId>gwt-log</artifactId>
+            <version>2.6.2</version>
+            <type>jar</type>
+        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.allen-sauer.gwt.log/gwt-log -->
+<!--        <dependency>
+            <groupId>com.allen-sauer.gwt.log</groupId>
+            <artifactId>gwt-log</artifactId>
+            <version>3.3.2</version>
+        </dependency>-->
+
+
     </dependencies>
 
     <build>
