--- a/pom.xml
+++ b/pom.xml
@@ -63,21 +63,6 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
-        
-        <!-- https://mvnrepository.com/artifact/com.google.code.gwt-log/gwt-log -->
-        <!--        <dependency>
-            <groupId>com.google.code.gwt-log</groupId>
-            <artifactId>gwt-log</artifactId>
-            <version>2.6.2</version>
-            <type>jar</type>
-        </dependency>-->
-        <!-- https://mvnrepository.com/artifact/com.allen-sauer.gwt.log/gwt-log -->
-<!--        <dependency>
-            <groupId>com.allen-sauer.gwt.log</groupId>
-            <artifactId>gwt-log</artifactId>
-            <version>3.3.2</version>
-        </dependency>-->
-
 
     </dependencies>
 
@@ -91,9 +76,9 @@
 
             <!-- GWT Maven Plugin-->
             <plugin>
-                <groupId>net.ltgt.gwt.maven</groupId>
+                <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
-                <version>1.0-rc-9</version>
+                <version>2.8.1</version>
                 <executions>
                     <execution>
                         <goals>
@@ -105,6 +90,8 @@
                 <configuration>
                     <moduleName>com.bsteele.bsteeleMusicApp.BSteeleMusicApp</moduleName>
                     <moduleShortName>BSteeleMusicApp</moduleShortName>
+                    <runTarget>bsteeleMusicApp.html</runTarget>
+                    <generateJsInteropExports>true</generateJsInteropExports>
                     <failOnError>true</failOnError>
                     <!-- GWT compiler 2.8 requires 1.8, hence define sourceLevel here if you use
                     a different source language for java compilation -->
