--- a/pom.xml
+++ b/pom.xml
@@ -59,19 +59,19 @@
         </dependency>
        
         
-        <dependency>
+<!--        <dependency>
             <groupId>org.realityforge.gwt.websockets</groupId>
             <artifactId>gwt-websockets</artifactId>
             <version>1.2</version>
             <scope>provided</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/javax.websocket/javax.websocket-api -->
+         https://mvnrepository.com/artifact/javax.websocket/javax.websocket-api 
         <dependency>
             <groupId>javax.websocket</groupId>
             <artifactId>javax.websocket-api</artifactId>
             <version>1.1</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>junit</groupId>
@@ -91,7 +91,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
-                <version>2.8.1</version>
+                <version>2.8.2</version>
                 <executions>
                     <execution>
                         <goals>
