--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-servlet</artifactId>
+            <version>2.8.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -57,9 +58,9 @@
             <artifactId>gwt-dev</artifactId>
             <scope>provided</scope>
         </dependency>
-       
-        
-<!--        <dependency>
+      
+
+        <!--        <dependency>
             <groupId>org.realityforge.gwt.websockets</groupId>
             <artifactId>gwt-websockets</artifactId>
             <version>1.2</version>
@@ -72,6 +73,9 @@
             <version>1.1</version>
             <scope>provided</scope>
         </dependency>-->
+        
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
+
 
         <dependency>
             <groupId>junit</groupId>
@@ -128,7 +132,7 @@
                     </codeserverArgs>
                 </configuration>
             </plugin>
-
+            
             <!-- Skip normal test execution, we use gwt:test instead -->
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -137,7 +141,39 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
-
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+      
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                </configuration>
+            </plugin>
+            
+             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin </artifactId>
+                <version>2.8.2</version>
+                <configuration>
+                </configuration>
+            </plugin>
+            
+            
         </plugins>
     </build>
 </project>
