--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,13 @@
             <scope>provided</scope>
         </dependency>-->
         
-        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
+       
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.2.0</version>
+        </dependency>
 
 
         <dependency>
@@ -107,7 +113,7 @@
                 <configuration>
                     <moduleName>com.bsteele.bsteeleMusicApp.BSteeleMusicApp</moduleName>
                     <moduleShortName>BSteeleMusicApp</moduleShortName>
-                    <runTarget>bsteeleMusicApp.html</runTarget>
+                    <runTarget>index.html</runTarget>
                     <generateJsInteropExports>true</generateJsInteropExports>
                     <failOnError>true</failOnError>
                     <!-- GWT compiler 2.8 requires 1.8, hence define sourceLevel here if you use
@@ -124,7 +130,7 @@
                     <classpathScope>compile+runtime</classpathScope>
                     <!-- URL(s) that should be opened by DevMode (gwt:devmode). -->
                     <startupUrls>
-                        <startupUrl>bsteeleMusicApp.html</startupUrl>
+                        <startupUrl>index.html</startupUrl>
                     </startupUrls>
                     <codeserverArgs>
                         <arg>-logLevel</arg>
@@ -165,11 +171,21 @@
                 </configuration>
             </plugin>
             
-             <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin </artifactId>
                 <version>2.8.2</version>
                 <configuration>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <packagingExcludes>
+                        WEB-INF/deploy/**
+                    </packagingExcludes>
                 </configuration>
             </plugin>
             
