--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,6 @@
     </servlet-mapping>
     <!-- Default page to serve -->
     <welcome-file-list>
-        <welcome-file>bsteeleMusicApp.html</welcome-file>
+        <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 </web-app>
