--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,18 @@
                     </execution>
                 </executions>
             </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <!--<arg>-verbose</arg>-->
+                        <arg>-Xlint:all,-options,-path</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
       
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -205,7 +217,17 @@
                     </packagingExcludes>
                 </configuration>
             </plugin>
-            
+
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+                <version>1.3.2</version>
+                <configuration>
+                    <deploy.stopPreviousVersion>true</deploy.stopPreviousVersion>
+                    <devserver.host>0.0.0.0</devserver.host>
+                    <devserver.port>8181</devserver.port>
+                </configuration>
+            </plugin>
             
         </plugins>
     </build>
