--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-servlet</artifactId>
-            <version>2.8.2</version>
+            <!--<version>2.8.2</version>-->
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -63,33 +63,39 @@
         <dependency>
             <groupId>com.google.jsinterop</groupId>
             <artifactId>jsinterop-annotations</artifactId>
-            <version>1.0.2</version>
+            <!--<version>1.0.2</version>-->
         </dependency>
 
 
-        <!--        <dependency>
+        <dependency>
             <groupId>org.realityforge.gwt.websockets</groupId>
             <artifactId>gwt-websockets</artifactId>
             <version>1.2</version>
             <scope>provided</scope>
         </dependency>
-         https://mvnrepository.com/artifact/javax.websocket/javax.websocket-api 
+        
+        <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-websocket-api -->
+        <!--        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-websocket-api</artifactId>
+            <version>9.0.4</version>
+        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/javax.websocket/javax.websocket-api -->
         <dependency>
             <groupId>javax.websocket</groupId>
             <artifactId>javax.websocket-api</artifactId>
             <version>1.1</version>
             <scope>provided</scope>
-        </dependency>-->
-        
-        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.0</version>
-            <scope>provided</scope>
         </dependency>
 
-        
+        <!-- https://mvnrepository.com/artifact/javax.websocket/javax.websocket-client-api -->
+        <dependency>
+            <groupId>javax.websocket</groupId>
+            <artifactId>javax.websocket-client-api</artifactId>
+            <version>1.1</version>
+        </dependency>
+
        
         <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
         <dependency>
