--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" 
+<web-app version="3.1" xmlns="http://java.sun.com/xml/ns/javaee" 
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee                
-        http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+        http://java.sun.com/xml/ns/javaee/web-app_3_1.xsd">
     <!-- Servlets -->
-    <servlet>
-        <servlet-name>greetServlet</servlet-name>
-        <servlet-class>com.bsteele.bsteeleMusicApp.server.GreetingServiceImpl</servlet-class>
+<!--    <servlet>
+        <servlet-name>BSteeleMusicAppServer</servlet-name>
+        <servlet-class>com.bsteele.bsteeleMusicApp.server.BSteeleMusicAppServer</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>greetServlet</servlet-name>
-        <url-pattern>/bsteelemusicapp/greet</url-pattern>
-    </servlet-mapping>
+        <servlet-name>BSteeleMusicAppServer</servlet-name>
+        <url-pattern>/bsteeleMusic</url-pattern>
+    </servlet-mapping>-->
     <!-- Default page to serve -->
-    <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
-    </welcome-file-list>
+<!--    <welcome-file-list>
+        <welcome-file>bsteeleMusicApp.html</welcome-file>
+    </welcome-file-list>-->
 </web-app>
