--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
     <artifactId>bsteeleMusicApp</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>com.bsteele.bsteeleMusicApp</name>
+    <name>bsteeleMusicApp</name>
 
     <properties>
 
-        <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
+        <!--<netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>-->
 
 
         <!-- Setting maven.compiler.source to something different to 1.8
@@ -75,19 +75,19 @@
         </dependency>
         
         <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-websocket-api -->
-        <!--        <dependency>
+        <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-websocket-api</artifactId>
             <version>9.0.4</version>
-        </dependency>-->
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/javax.websocket/javax.websocket-api -->
-        <dependency>
+<!--        <dependency>
             <groupId>javax.websocket</groupId>
             <artifactId>javax.websocket-api</artifactId>
             <version>1.1</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/javax.websocket/javax.websocket-client-api -->
         <dependency>
@@ -207,7 +207,7 @@
             
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin </artifactId>
+                <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
                 <configuration>
                 </configuration>
