--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-    <!-- POM file generated with GWT webAppCreator -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.bsteele</groupId>
     <artifactId>bsteeleMusicApp</artifactId>
-    <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>bsteeleMusicApp</name>
 
     <properties>
@@ -40,14 +39,14 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
+  
     <dependencies>
-        <dependency>
+            <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-servlet</artifactId>
             <!--<version>2.8.2</version>-->
             <scope>runtime</scope>
-        </dependency>
+            </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
@@ -59,21 +58,20 @@
             <scope>provided</scope>
         </dependency>
         
-        <!-- https://mvnrepository.com/artifact/com.google.jsinterop/jsinterop-annotations -->
-        <dependency>
-            <groupId>com.google.jsinterop</groupId>
-            <artifactId>jsinterop-annotations</artifactId>
-            <!--<version>1.0.2</version>-->
-        </dependency>
+            <!-- https://mvnrepository.com/artifact/com.google.jsinterop/jsinterop-annotations -->
+            <dependency>
+                <groupId>com.google.jsinterop</groupId>
+                <artifactId>jsinterop-annotations</artifactId>
+                <!--<version>1.0.2</version>-->
+            </dependency>
 
-
-        <dependency>
-            <groupId>org.realityforge.gwt.websockets</groupId>
-            <artifactId>gwt-websockets</artifactId>
-            <version>1.2</version>
-            <scope>provided</scope>
-        </dependency>
-        
+            <dependency>
+                <groupId>org.realityforge.gwt.websockets</groupId>
+                <artifactId>gwt-websockets</artifactId>
+                <version>1.2</version>
+                <scope>provided</scope>
+            </dependency>
+       
         <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-websocket-api -->
         <dependency>
             <groupId>org.apache.tomcat</groupId>
@@ -81,24 +79,16 @@
             <version>9.0.4</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/javax.websocket/javax.websocket-api -->
-<!--        <dependency>
-            <groupId>javax.websocket</groupId>
-            <artifactId>javax.websocket-api</artifactId>
-            <version>1.1</version>
-            <scope>provided</scope>
-        </dependency>-->
-
-        <!-- https://mvnrepository.com/artifact/javax.websocket/javax.websocket-client-api -->
-        <dependency>
-            <groupId>javax.websocket</groupId>
-            <artifactId>javax.websocket-client-api</artifactId>
-            <version>1.1</version>
-        </dependency>
+            <!-- https://mvnrepository.com/artifact/javax.websocket/javax.websocket-client-api -->
+<!--            <dependency>
+                <groupId>javax.websocket</groupId>
+                <artifactId>javax.websocket-client-api</artifactId>
+                <version>1.1</version>
+            </dependency>-->
 
        
         <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
-        <dependency>
+            <dependency>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-war-plugin</artifactId>
             <version>3.2.0</version>
@@ -106,13 +96,13 @@
 
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.11</version>
+                <scope>test</scope>
+            </dependency>
 
-    </dependencies>
+        </dependencies>
 
     <build>
         <!-- Output classes directly into the webapp, so that IDEs and "mvn process-classes" update them in DevMode -->
@@ -133,6 +123,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <launcherDir>${project.build.directory}/gwt/launcherDir</launcherDir>
                     <moduleName>com.bsteele.bsteeleMusicApp.BSteeleMusicApp</moduleName>
                     <moduleShortName>BSteeleMusicApp</moduleShortName>
                     <runTarget>index.html</runTarget>
@@ -161,6 +152,7 @@
                 </configuration>
             </plugin>
             
+                           
             <!-- Skip normal test execution, we use gwt:test instead -->
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -169,34 +161,7 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
-            
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>3.0.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
-                <configuration>
-                    <compilerArgs>
-                        <!--<arg>-verbose</arg>-->
-                        <arg>-Xlint:all,-options,-path</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-      
+        
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -205,25 +170,6 @@
                 </configuration>
             </plugin>
             
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
-                <configuration>
-                </configuration>
-            </plugin>
-            
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <packagingExcludes>
-                        WEB-INF/deploy/**
-                    </packagingExcludes>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>appengine-maven-plugin</artifactId>
@@ -234,7 +180,60 @@
                     <devserver.port>8181</devserver.port>
                 </configuration>
             </plugin>
-            
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <!-- Do not upgrade past 3.1 to avoid triggering https://issues.apache.org/jira/browse/MSOURCES-95 -->
+                    <!-- Unless you use annotation processors, then upgrade to 3.5.1 at a minimum -->
+                    <version>3.7.0</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                        <compilerArgs>
+                            <!--<arg>-verbose</arg>-->
+                            <arg>-Xlint:all,-options,-path</arg>
+                        </compilerArgs>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-maven-plugin</artifactId>
+                    <version>9.4.8.v20171121</version>
+                </plugin>
+                <plugin>
+                    <groupId>net.ltgt.gwt.maven</groupId>
+                    <artifactId>gwt-maven-plugin</artifactId>
+                    <version>1.0-rc-9</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <sourceLevel>1.8</sourceLevel>
+                        <failOnError>true</failOnError>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>3.0.1</version>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>jar-no-fork</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.tomcat.maven</groupId>
+                    <artifactId>tomcat7-maven-plugin</artifactId>
+                    <version>2.2</version>
+                </plugin>
+                
+ 
+            </plugins>
+        </pluginManagement>
+            
     </build>
 </project>
