--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
             <version>1.9.3.1</version>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>com.github.gwtmaterialdesign</groupId>
+            <artifactId>gwt-material</artifactId>
+            <version>2.0.1</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
