--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     </dependencyManagement>
   
     <dependencies>
+        <!-- GWT dependencies -->
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-servlet</artifactId>
@@ -75,6 +76,15 @@
             <scope>provided</scope>
         </dependency>
         
+         <!-- GWTP -->
+         <!-- https://mvnrepository.com/artifact/com.gwtplatform/gwtp-mvp-client -->
+        <dependency>
+            <groupId>com.gwtplatform</groupId>
+            <artifactId>gwtp-mvp-client</artifactId>
+            <version>1.6</version>
+            <scope>provided</scope>
+        </dependency>
+        
         <dependency>
             <groupId>com.github.gwtmaterialdesign</groupId>
             <artifactId>gwt-material</artifactId>
@@ -93,8 +103,25 @@
         <!-- Output classes directly into the webapp, so that IDEs and "mvn process-classes" update them in DevMode -->
         <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
         <finalName>${project.artifactId}</finalName>
+        
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
 
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            
             <!-- GWT Maven Plugin-->
             <plugin>
                 <groupId>net.ltgt.gwt.maven</groupId>
@@ -109,6 +136,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <strict>true</strict>
                     <appEngineHome>/home/bob/my/installs/google/appengine-java-sdk/latest</appEngineHome>
                     <moduleName>com.bsteele.bsteeleMusicApp.BSteeleMusicApp</moduleName>
                     <moduleShortName>bsteeleMusicApp</moduleShortName>
