add phrases to chord section locations, repaired the tests, ready to test app? measure focus on tab change arrow keys for edit select... sort of slash chords restricted to major chord descriptor

--- a/logging.properties
+++ b/logging.properties
@@ -44,7 +44,9 @@ java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-120s, %2$
 # Facility specific properties.
 # Provides extra control for each logger.
 ############################################################
+#   -Djava.util.logging.config.file=logging.properties
 #com.bsteele.bsteeleMusicApp.server.BSteeleMusicAppServer = FINE
 #com.bsteele.bsteeleMusicApp.client.application.BSteeleMusicIO=FINE
 #com.bsteele.bsteeleMusicApp.client.presenterWidgets.LyricsAndChordsViewImpl =FINE
-com.bsteele.bsteeleMusicApp.client.presenterWidgets.SongEditView=FINE
+#com.bsteele.bsteeleMusicApp.client.presenterWidgets.SongEditView=FINE
+com.bsteele.bsteeleMusicApp.shared.songs.SongBaseTest.level=FINE
