rough song editing functional again...sort of added A.1 functionality softened markup on file storage added & fixed tests

--- a/logging.properties
+++ b/logging.properties
@@ -53,5 +53,5 @@ com.bsteele.bsteeleMusicApp.client.presenterWidgets.SongEditView=FINEST
 com.bsteele.bsteeleMusicApp.shared.songs.SongBaseTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.SongBase.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.SongEditTest.level=FINEST
-#com.bsteele.bsteeleMusicApp.shared.songs.SongEntryTest.level=FINEST
+com.bsteele.bsteeleMusicApp.shared.songs.SongEntryTest.level=FINEST
 
