chordsToTransportString(), fixed tests

--- a/logging.properties
+++ b/logging.properties
@@ -49,9 +49,10 @@ java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-120s, %2$
 #com.bsteele.bsteeleMusicApp.server.BSteeleMusicAppServer = FINE
 #com.bsteele.bsteeleMusicApp.client.application.BSteeleMusicIO=FINE
 #com.bsteele.bsteeleMusicApp.client.presenterWidgets.LyricsAndChordsViewImpl=FINEST
-com.bsteele.bsteeleMusicApp.client.presenterWidgets.SongEditView=FINEST
-com.bsteele.bsteeleMusicApp.shared.songs.SongBaseTest.level=FINEST
+#com.bsteele.bsteeleMusicApp.client.presenterWidgets.SongEditView=FINEST
+#com.bsteele.bsteeleMusicApp.shared.songs.SongBaseTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.SongBase.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.SongEditTest.level=FINEST
-com.bsteele.bsteeleMusicApp.shared.songs.SongEntryTest.level=FINEST
+#com.bsteele.bsteeleMusicApp.shared.songs.SongEntryTest.level=FINEST
+com.bsteele.bsteeleMusicApp.client.songs.SongTest.level=FINEST
 
