fixed broken measure replacement, fixed broken repeat with - measure

--- a/logging.properties
+++ b/logging.properties
@@ -56,6 +56,6 @@ com.bsteele.bsteeleMusicApp.shared.songs.SongBaseTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.SongEntryTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.client.songs.SongTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.KeyTest.level=FINEST
-com.bsteele.bsteeleMusicApp.shared.songs.ChordSection.level=FINE
+#com.bsteele.bsteeleMusicApp.shared.songs.ChordSection.level=FINE
 com.bsteele.bsteeleMusicApp.shared.songs.ChordSectionTest.level=FINE
 
