--- a/logging.properties
+++ b/logging.properties
@@ -40,9 +40,7 @@ java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 #     <level>: <log message> [<date/time>]
 #
 #linux:
-# java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-120s, %2$s %6$s%n
-#mac:
-java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-60s, %2$s %6$s%n
+java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-120s, %2$s %6$s%n
 ############################################################
 # Facility specific properties.
 # Provides extra control for each logger.
@@ -62,6 +60,6 @@ java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-60s, %2$s
 #com.bsteele.bsteeleMusicApp.shared.songs.KeyTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.ChordSection.level=FINE
 #com.bsteele.bsteeleMusicApp.shared.songs.ChordSectionTest.level=FINE
-#com.bsteele.bsteeleMusicApp.shared.songs.SongPlayerTest.level=FINE
-com.bsteele.bsteeleMusicApp.shared.songs.ChordTest.level=FINE
+com.bsteele.bsteeleMusicApp.shared.songs.SongPlayerTest.level=FINEST
+#com.bsteele.bsteeleMusicApp.shared.songs.ChordTest.level=FINE
 
