findPlayerFlexTableRow(), findDisplayY(), update tuning WIP, fixed parseLyrics() last line

--- a/logging.properties
+++ b/logging.properties
@@ -51,6 +51,7 @@ java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-120s, %2$
 #com.bsteele.bsteeleMusicApp.client.application.BSteeleMusicIO=FINE
 #com.bsteele.bsteeleMusicApp.client.presenterWidgets.LyricsAndChordsViewImpl=FINEST
 #com.bsteele.bsteeleMusicApp.client.presenterWidgets.SongEditView=FINEST
+com.bsteele.bsteeleMusicApp.client.presenterWidgets.PlayerViewImpl=FINER
 com.bsteele.bsteeleMusicApp.shared.songs.SongBaseTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.SongBase.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.MeasureRepeatTest.level=FINEST
@@ -62,4 +63,3 @@ com.bsteele.bsteeleMusicApp.shared.songs.SongBaseTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.ChordSectionTest.level=FINE
 #com.bsteele.bsteeleMusicApp.shared.songs.SongPlayerTest.level=FINE
 #com.bsteele.bsteeleMusicApp.shared.songs.ChordTest.level=FINE
-
